@@ -35,9 +35,9 @@
       </methodsynopsis>
       <methodsynopsis language="python">
 	<methodname><link linkend="method-gtkfilefilter--add-custom">add_custom</link></methodname>
-	<methodparam><parameter role="keyword">needed</parameter></methodparam>
-	<methodparam><parameter role="keyword">func</parameter></methodparam>
-	<methodparam><parameter role="keyword">data</parameter></methodparam>
+	<methodparam><parameter>needed</parameter></methodparam>
+	<methodparam><parameter>func</parameter></methodparam>
+	<methodparam><parameter>data</parameter></methodparam>
       </methodsynopsis>
       <methodsynopsis language="python">
 	<methodname><link linkend="method-gtkfilefilter--get-needed">get_needed</link></methodname>
@@ -321,23 +321,23 @@ and "a9c" but not "a28c" or "abc".</simpara>
 
       <programlisting><methodsynopsis language="python">
 	  <methodname>add_custom</methodname>
-	  <methodparam><parameter role="keyword">needed</parameter></methodparam>
-	  <methodparam><parameter role="keyword">func</parameter></methodparam>
-	  <methodparam><parameter role="keyword">data</parameter></methodparam>
+	  <methodparam><parameter>needed</parameter></methodparam>
+	  <methodparam><parameter>func</parameter></methodparam>
+	  <methodparam><parameter>data</parameter></methodparam>
 	</methodsynopsis></programlisting>
       <variablelist>
 	<varlistentry>
-	  <term><parameter role="keyword">needed</parameter>&nbsp;:</term>
+	  <term><parameter>needed</parameter>&nbsp;:</term>
 	  <listitem><simpara>a bitfield of flags indicating the information
 that the custom filter function needs.</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><parameter role="keyword">func</parameter>&nbsp;:</term>
+	  <term><parameter>func</parameter>&nbsp;:</term>
 	  <listitem><simpara>a callback function; if the function returns
 <literal>TRUE</literal>, then the file will be displayed.</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term><parameter role="keyword">data</parameter>&nbsp;:</term>
+	  <term><parameter>data</parameter>&nbsp;:</term>
 	  <listitem><simpara>the data to pass to
 <parameter>func</parameter></simpara></listitem>
 	</varlistentry>
