@@ -5,6 +5,8 @@
 	* pygtk-gtkfilechooserwidget.xml Add.
 	* pygtk-gtkfilefilter.xml Add.
 
+	* pygtk-gtkfilefilter.xml (add_custom) Doesn't take keyword args.
+
 2004-04-06  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkeventbox.xml Add new methods: set_visible_window(),
